cmake_minimum_required(VERSION 3.0)

set(SRCS
    AbstractBinaryExpr.cpp
    AbstractExpr.cpp
    AbstractInst.cpp
    AbstractLValue.cpp
	AbstractMain.cpp
    AbstractOpArith.cpp
    AbstractReadExpr.cpp
    AbstractTreeNode.cpp
    AbstractUnaryExpr.cpp
    AndExpr.cpp
    BooleanLiteral.cpp
    Cast.cpp
    DeclClass.cpp
    DeclVar.cpp
    EmptyMain.cpp
    EqualityExpr.cpp
    Identifier.cpp
    InequalityExpr.cpp
    Initialization.cpp
    IntLiteral.cpp
    MethodCall.cpp
    Minus.cpp
    New.cpp
    NonEmptyMain.cpp
    Not.cpp
    Null.cpp
    OrExpr.cpp
    Plus.cpp
    Print.cpp
    Program.cpp
    ReadFloat.cpp
    ReadInt.cpp
    Selection.cpp
    This.cpp
    UnaryMinus.cpp
	)
	
set(HEADERS
    AbstractBinaryExpr.h
    AbstractExpr.h
    AbstractInst.h
    AbstractLValue.h
	AbstractMain.h
    AbstractOpArith.h
    AbstractReadExpr.h
    AbstractTreeNode.h
    AbstractUnaryExpr.h
    AndExpr.h
    BooleanLiteral.h
    Cast.h
    DeclClass.h
    DeclVar.h
	EmptyMain.h
    EqualityExpr.h
    Identifier.h
    InequalityExpr.h
    Initialization.h
    IntLiteral.h
    MethodCall.h
    Minus.h
    New.h
	NonEmptyMain.h
    Not.h
    Null.h
    OrExpr.h
    Plus.h
    Print.h
    Program.h
    ReadFloat.h
    ReadInt.h
    Selection.h
    This.h
    UnaryMinus.h
    )

add_library(AST ${SRCS} ${HEADERS})