cmake_minimum_required(VERSION 3.0)

set(SRCS
    AbstractBinaryExpr.cpp
    AbstractExpr.cpp
    AbstractInst.cpp
    AbstractLValue.cpp
	AbstractMain.cpp
    AbstractOpArith.cpp
    AbstractOpCmp.cpp
    AbstractOpIneq.cpp
    AbstractReadExpr.cpp
    AbstractUnaryExpr.cpp
    And.cpp
    BooleanLiteral.cpp
    Cast.cpp
    DeclClass.cpp
    DeclVar.cpp
    EmptyMain.cpp
    EqualityExpr.cpp
    Greater.cpp
    GreaterOrEqual.cpp
    Identifier.cpp
    InequalityExpr.cpp
    Initialization.cpp
    IntLiteral.cpp
    Lower.cpp
    LowerOrEqual.cpp
    Main.cpp
    MethodCall.cpp
    Minus.cpp
    New.cpp
    Not.cpp
    Null.cpp
    Or.cpp
    Plus.cpp
    Print.cpp
    Program.cpp
    ReadFloat.cpp
    ReadInt.cpp
    Selection.cpp
    This.cpp
    UnaryMinus.cpp
	)
	
set(HEADERS
    AbstractBinaryExpr.h
    AbstractExpr.h
    AbstractInst.h
    AbstractLValue.h
	AbstractMain.h
    AbstractOpArith.h
    AbstractOpCmp.h
    AbstractOpIneq.h
    AbstractReadExpr.h
    AbstractUnaryExpr.h
    And.h
    BooleanLiteral.h
    Cast.h
    DeclClass.h
    DeclVar.h
	EmptyMain.h
    EqualityExpr.h
    Greater.h
    GreaterOrEqual.h
    Identifier.h
    InequalityExpr.h
    Initialization.h
    IntLiteral.h
    Lower.h
    LowerOrEqual.h
    Main.h
    MethodCall.h
    Minus.h
    New.h
    Not.h
    Null.h
    Or.h
    Plus.h
    Print.h
    Program.h
    ReadFloat.h
    ReadInt.h
    Selection.h
    This.h
    UnaryMinus.h
    )

add_library(AST ${SRCS} ${HEADERS})