cmake_minimum_required(VERSION 3.0)

set(SRCS
    AbstractBinaryExpr.cpp
    AbstractExpr.cpp
    AbstractInitialization.cpp
    AbstractInst.cpp
    AbstractLiteral.cpp
    AbstractLValue.cpp
	AbstractMain.cpp
    AbstractMethodBody.cpp
    AbstractOpArith.cpp
    AbstractOpBool.cpp
    AbstractOpCmp.cpp
    AbstractOpExactCmp.cpp
    AbstractOpIneq.cpp
    AbstractReadExpr.cpp
    AbstractUnaryExpr.cpp
    And.cpp
    Assign.cpp
    BooleanLiteral.cpp
    Cast.cpp
    DeclClass.cpp
    DeclField.cpp
    DeclMethod.cpp
    DeclParam.cpp
    DeclVar.cpp
    Divide.cpp
    EmptyMain.cpp
    Equals.cpp
    Greater.cpp
    GreaterOrEqual.cpp
    Identifier.cpp
    IfThenElse.cpp
    Initialization.cpp
    InstanceOf.cpp
    IntLiteral.cpp
    Lower.cpp
    LowerOrEqual.cpp
    Main.cpp
    MethodAsmBody.cpp
    MethodBody.cpp
    MethodCall.cpp
    Minus.cpp
    Modulo.cpp
    Multiply.cpp
    New.cpp
    NoInitialization.cpp
    NoOperation.cpp
    Not.cpp
    NotEquals.cpp
    Null.cpp
    Or.cpp
    Plus.cpp
    Print.cpp
    Program.cpp
    ReadFloat.cpp
    ReadInt.cpp
    Return.cpp
    Selection.cpp
    StringLiteral.cpp
    This.cpp
    UnaryMinus.cpp
    While.cpp
	)
	
set(HEADERS
    AbstractBinaryExpr.h
    AbstractExpr.h
    AbstractInitialization.h
    AbstractInst.h
    AbstractLiteral.h
    AbstractLValue.h
	AbstractMain.h
    AbstractMethodBody.h
    AbstractOpArith.h
    AbstractOpBool.h
    AbstractOpCmp.h
    AbstractOpExactCmp.h
    AbstractOpIneq.h
    AbstractReadExpr.h
    AbstractUnaryExpr.h
    And.h
    Assign.h
    BooleanLiteral.h
    Cast.h
    DeclClass.h
    DeclField.h
    DeclMethod.h
    DeclParam.h
    DeclVar.h
    Divide.h
	EmptyMain.h
    Equals.h
    Greater.h
    GreaterOrEqual.h
    Identifier.h
    IfThenElse.h
    Initialization.h
    InstanceOf.h
    IntLiteral.h
    Lower.h
    LowerOrEqual.h
    Main.h
    MethodAsmBody.h
    MethodBody.h
    MethodCall.h
    Minus.h
    Modulo.h
    Multiply.h
    New.h
    NoInitialization.h
    NoOperation.h
    Not.h
    NotEquals.h
    Null.h
    Or.h
    Plus.h
    Print.h
    Program.h
    ReadFloat.h
    ReadInt.h
    Return.h
    Selection.h
    StringLiteral.h
    This.h
    UnaryMinus.h
    While.h
    )

add_library(AST ${SRCS} ${HEADERS})